Start slides for amphi 3

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -41,6 +41,14 @@ pre {
   justify-content: space-between;
 }
 
+.vertbar {
+  flex: 0%;
+  border: 1px solid black;
+  padding: 0px;
+  margin: 1rem;
+  max-width: 0px;
+}
+
 .thirty {
   flex: 30%;
 }
