local IP rewritten and NAT added and both moved in slides1

--- a/static/css/minesparis.css
+++ b/static/css/minesparis.css
@@ -89,6 +89,10 @@ div.slide_footer span {
   font-style: italic;
 }
 
+.smaller {
+  font-size: smaller;
+}
+
 div.references {
   position: absolute;
   bottom: 5%;
