a little nicer code snippets

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,23 +3,40 @@ pre {
 }
 
 .remark-code {
-  font-family: "monospace";
+  --code-font: "JetBrains Mono", serif;
+  font-family: var(--code-font);
   font-size: 14px;
+  padding: 1em !important;
+  border-radius: 10px;
+  background-color: #b8d1dd !important;
+  word-wrap: break-word;
+}
+
+.remark-code-line-highlighted {
+  background-color: rgba(250, 253, 163, 0.3) !important;
+  border-radius: 3px;
 }
 
 .remark-inline-code {
-  font-family: "monospace";
+  font-family: var(--code-font);
   background-color: rgba(135, 131, 120, 0.15);
-  border-radius: 3px;
+  border-radius: 4px;
   padding: 0.1em 0.4em;
   color: #eb5757;
+
 }
 
-.remark-code {
-  padding: 1em !important;
-  border-radius: 10px;
-  background-color: #9c9e9f !important;
-  word-wrap: break-word;
+button.copy-button {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  border-radius: 4px;
+  padding: 2px 4px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  background: #71abbbcc;
+  color: #20212caa;
 }
 
 .clignote {
